# HashLite

./: CMakeLists.txt  README.md
examples/: hash_file.cpp  hash_text.cpp
include/: CRC16.h  CRC32.h  CRC8.h  HashLite.h  MD5.h  SHA1.h  SHA224.h  SHA256.h  SHA384.h  SHA512.h
src/: CRC16.cpp  CRC32.cpp  CRC8.cpp  HashLite.cpp  MD5.cpp  SHA1.cpp  SHA224.cpp  SHA256.cpp  SHA384.cpp  SHA512.cpp
